Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
:root {
	--top-section-height: 106px;
}

section,
div,
p,
img,
ul,
ol,
li {
	margin: 0;
	padding: 0;
}

.alignment-boxes {
	flex: 1 1 46.66%;
	height: 100%;
	margin: 0;
	padding: 0;
	//border: 0.1rem solid green;
}

.icon-fill {
	fill: black;
}

#App {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	height: 100vh;
	/*width: 100vw;
	max-width: 100vw; */
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	overflow-y: hidden;
	background-color: white;
	align-items: center;
	font-size: calc(10px + 2vmin);
	color: black;
	section {
		height: 100%;
		width: 100vw;
		margin: 0;
		padding: 0;
	}
	#left-container {
		z-index: 2;
		position: fixed;
		margin-top: calc(100vh - 53.5px);
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		/* margin: 0; */
		padding: 0;
		//align-items: end;
		border-top: 0.1rem solid rgb(239, 243, 244);
		height: 53.5px;
		width: 100%;
		//border: solid red;
		background-color: white;
		font-family: "Arimo", sans-serif;
		font-size: 1.3rem;
		nav {
			width: 100%;
			height: 100%;
			margin: 0;
			padding: 0;
			text-decoration: none;
			//border:solid yellow;
			ul {
				display: flex;
				justify-content: space-evenly;
				list-style: none;
				margin: 0;
				padding: 0;
				height: 100%;
				//padding-left:2px;
				//border: 1px solid green;
				//list-style-image:url("birdhouse.png");
				img {
					width: 1.5rem;
					height: 2rem;
					margin-bottom: 1rem;
				}

				a {
					display: flex;
					justify-content: center;
					align-items: center;
					text-decoration: none;
					color: initial;
					//margin: 0 0 0 2px;
					padding: 0;
					width: 100%;
					height: 100%;
					//border: 1px solid blue;
					li {
						display: flex;
						justify-content: center;
						align-items: center;
						margin: 0;
						padding: 0;
						//padding: 1rem 1.5rem 1rem 1.5rem;
						//border:solid blue;
						svg {
							display: inline-block;
							/* padding:0;
							margin:0; */
							//border:solid red;
							align-self: center;
						}
					}
					li:hover {
						background-color: rgba(220, 220, 220, 0.6);
						border-radius: 2rem;
						width: max-content;
						padding: 1rem 1.5rem 1rem 1.5rem;
					}
				}

				button {
					display: none;
					align-self: start;
					font-weight: bold;
					font-size: 1.1rem;
					border-radius: 3rem;
					width: 14rem;
					height: 3.3rem;
					color: white;
					background-color: #1d9bf0;
					border: none;
					margin-top: 1.5rem;
				}
				button:hover {
					background-color: #1d8ad3;
				}
			}
			//must add hover effect
		}
		#profile-pill-container {
			width: 45%;
			display: none;
			justify-content: start;
			padding-bottom: 1rem;
		}
		#profile-pill {
			display: flex;
			justify-content: space-between;
			align-items: center;
			justify-self: start;
			padding: 0.5rem 1rem 0.5rem 1rem;
			width: 14rem;
			height: 3.6rem;
			border-radius: 3.6rem;
			font-size: 1rem;
			overflow: hidden;
			img {
				width: 3rem;
				height: 3rem;
				border-radius: 50%;
			}
		}
		#profile-pill:hover {
			background-color: rgba(220, 220, 220, 255);
		}
	}
	#middle-container {
		flex: 0 0 100%;
		display: flex;
		direction: column;
		overflow-y: scroll;
		order: 1;
		z-index: 1;
		#header {
			position: fixed;
			height: var(--top-section-height);
			width: 100%;
			background-color: rgba($color: #ffffff, $alpha: 0.8);
			backdrop-filter: blur(10px);
			border-bottom: 0.1rem solid rgb(239, 243, 244);
			#header-top {
				display: flex;
				justify-content: center;
				align-items: center;
				font-size: 1.2rem;
				font-weight: bold;
				height: 3.2rem;
				#profile-picture {
					margin-left: 16px;
					margin-top: 10px;
					width: 32px;
					height: 32px;
					border-radius: 50%;
					padding: 0;
					//border: 0.1rem solid red;
				}

				#twitter-logo {
					height: 24.39px;
					padding: 0;
					margin: 0;
					flex: 1 1 auto;
					fill: rgb(29, 155, 240);

				}
			}
			#header-bottom {
				height: 50%;
				display: flex;
				flex-direction: column;
				justify-content: end;
				border-bottom: 0px;
				ul {
					display: flex;
					justify-content: space-evenly;
					margin-top: auto;
					margin-bottom: auto;
					text-decoration: none;
					list-style: none;
					a {
						margin: 0;
						padding: 0;
						flex: 1 1 auto;
						display: flex;
						justify-content: center;
						li {
							font-size: 15px;
							font-weight: 500;
							line-height: 20px;
							color: grey;
						}
					}
				}
			}
		}
		#tweet-area {
			display: none;
			justify-content: space-between;
			img {
				width: 3rem;
				height: 3rem;
				border-radius: 50%;
				align-self: center;
				margin-left: 1rem;
				margin-top: -0.9rem;
			}
			#tweet-input {
				width: 87%;
				height: 5rem;
				border: none;
			}
			::placeholder {
				font-size: 1.23rem;

				color: black;
				opacity: 0.7;
			}
			#tweet-input:focus {
				outline: 0;
			}
		}

		#timeline-div {
			width: 100%;
			margin-top: var(--top-section-height);
		}
		#icons-row {
			padding: 0 0 1rem 5rem;
			display: none;
			justify-content: space-between;
			border-bottom: 0.05rem solid rgba(220, 220, 220, 0.3);

			ul {
				display: flex;
				li {
					list-style: none;
					margin: 0 1rem 0 0;
					img {
						transform: scale(1.05);
					}
				}
			}
			button {
				justify-self: end;
				font-weight: bold;
				font-size: 1.1rem;
				border-radius: 2.3rem;
				width: 5rem;
				height: 2.3rem;
				color: white;
				background-color: #1d9bf0;
				border: none;
				margin-right: 1rem;
			}
		}
	}

	#middle-container::-webkit-scrollbar {
		display: none;
	}

	#right-container {
		display: none;
		flex-direction: column;
		//gap: 1rem;
		//padding-left: 2rem;
		//border-left: 0.05rem solid rgba(220, 220, 220, 0.3);
		//flex: 0 0 37.2%;
		input {
			background-color: rgba(239, 243, 244, 255);
			border-width: 0;
			border-radius: 3rem;
			width: 50%;
			height: 2.5rem;
			margin-top: 0.32rem;
		}
		::placeholder {
			padding-left: 2rem;
		}

		#trending-section {
			display: flex;
			justify-content: initial;
			flex-direction: column;
			width: 50%;
			height: 24rem;
			background-color: rgba(239, 243, 244, 255);
			border-radius: 5%;
			overflow: hidden;

			.cards-header {
				display: flex;
				font-size: 1.3rem;
				font-weight: bold;
				padding-left: 1rem;
				flex: 0 0 14%;
				align-items: center;
			}
			.cards {
				padding-left: 1rem;

				flex: 0 0 18%;
			}
			.cards:hover {
				background-color: rgba(220, 220, 220, 255);
			}
			.cards-footer {
				display: flex;
				align-items: center;
				flex: 0 0 14%;
				font-size: 1rem;
				padding-left: 1rem;
				a {
					text-decoration: none;
					color: #53b3f2;
				}
			}
			.cards-footer:hover {
				background-color: rgba(220, 220, 220, 255);
			}
		}

		#rec-follows-section {
			display: flex;
			justify-content: initial;
			flex-direction: column;
			width: 50%;
			height: 19.92rem;
			background-color: rgba(239, 243, 244, 255);
			border-radius: 5%;
			overflow: hidden;

			.cards-header {
				display: flex;
				font-size: 1.3rem;
				font-weight: bold;
				padding-left: 1rem;
				flex: 0 0 17%;
				align-items: center;
			}
			.cards {
				padding-left: 1rem;

				flex: 0 0 22%;
			}
			.cards:hover {
				background-color: rgba(220, 220, 220, 255);
			}
			.cards-footer {
				display: flex;
				align-items: center;
				flex: 0 0 17%;
				font-size: 1rem;
				padding-left: 1rem;
				a {
					text-decoration: none;
					color: rgba(48, 164, 241, 255);
				}
			}
			.cards-footer:hover {
				background-color: rgba(220, 220, 220, 255);
			}
		}
	}
}

/*.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}*/

